--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ font-family: 'poppins',sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background:#111;
-    color: #fff;
+    background:rgb(0, 0, 0);
+    color: rgb(225, 225, 225);
     z-index: 2;
     transition: 0.7s;
 }
@@ -44,6 +44,7 @@ font-family: 'poppins',sans-serif;
 .logo{
     text-transform: uppercase;
     cursor: pointer;
+    text-size-adjust: 100px;
 }
 
 .toggle{
@@ -79,8 +80,9 @@ font-family: 'poppins',sans-serif;
     left: 0;
     width: 100%;
     height: 100%;
+    
     /* background:var(--overlay-color); */
-    /* mix-blend-mode: overlay; */
+     /* mix-blend-mode:normal;  */
 
 }
 
@@ -165,6 +167,12 @@ font-family: 'poppins',sans-serif;
     align-items:center;
     justify-content:center;
 }
+
+.wall{
+    margin: 2px;
+    padding: 0;
+}
+
 
 .menu ul {
     position: relative;
